4-5-23 all alignment fix

--- a/src/pages/Home/HowItWork/how.css
+++ b/src/pages/Home/HowItWork/how.css
@@ -98,9 +98,7 @@
         font-size: 1.5rem;
     }
 
-    .mrProcess {
-        padding: 0 6rem;
-    }
+    
 }
 
 @media (max-width:767px) {
