--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,11 +1,12 @@
 .fix-container {
     background-color: #FDF3FB;
-
+    display: flex;
+    justify-content: center;
 }
 .home-container {
-    /* position: relative; */
-    display: flex;
     position: relative;
+    display: flex;
+    max-width: 1566px;
 }
 
 .bg-home .img-home {
@@ -14,7 +15,7 @@
 }
 
 .headphone-home img {
-    width: 10rem;
+    width: 12rem;
     height: 100%;
 }
 
@@ -35,18 +36,20 @@
 
 .headphone-home {
     position: absolute;
-    right: 21rem;
-    top: 2.5rem;
+    right: 30rem;
+    top: 8.5rem;
 }
 
 .bg-home {
-    width: 35%;
+    width: 40%;
+
 }
 
 .home-text {
     width: 65%;
     padding-top: 7rem;
-    padding-left: 4rem;
+    padding-left: 13rem;
+    padding-right: 2rem;
     padding-bottom: 2rem;
 }
 
@@ -89,7 +92,7 @@
     .home-text {
         width: 65%;
         padding-top: 7rem;
-        padding-left: 10rem;
+        padding-left: 9rem;
         padding-right: 1rem;
         padding-bottom: 2rem;
     }
@@ -115,7 +118,11 @@
         height: 100%;
     }
 }
-
+@media (max-width:1390px) {
+    .home-text h1 {
+        font-size: 3.5rem;
+    }
+}
 @media (max-width:1050px) {
     .home-text {
         width: 60%;
@@ -124,11 +131,12 @@
         padding-right: 3rem;
         padding-bottom: 2rem;
     }
-
     .bg-home {
         width: 40%;
     }
-
+    .home-text h1 {
+        font-size: 3.2rem;
+    }
     .bg-home .img-home {
         width: 24rem;
         height: 30rem;
